# career-pilot-agent

./: .env.example  .gitignore  AGENTS.md  README.md  agent_tech_architecture_optimized.html  pyproject.toml  项目要求.md
career_agent/: cli.py  config.py
career_agent/model/: bailian_provider.py  base.py  factory.py  mock_provider.py
career_agent/prompts/: compression_prompt.md  critic_prompt.md  library.py  planner_prompt.md  report_prompt.md  system_prompt.md
career_agent/runtime/: agent_loop.py  boundary_guard.py  compressor.py  context_builder.py  critic.py  events.py  json_utils.py  planner.py  report_synthesizer.py  run_state.py  token_budget.py  trace_logger.py
career_agent/skills/: loader.py  registry.py  selector.py
career_agent/tools/: base.py  file_tools.py  registry.py  reminder_tool.py  shell_tool.py  time_tool.py  todo_tool.py
examples/: trace_with_compression.json
tests/: test_agent_loop.py  test_boundary_guard.py  test_cli_smoke.py  test_compressor.py  test_context_builder.py  test_critic.py  test_examples.py  test_json_utils.py  test_mock_provider.py  test_model_provider.py  test_planner.py  test_planner_validation.py  test_prompt_library.py  test_report_synthesizer.py  test_skills.py  test_token_budget.py  test_tools.py  test_trace_logger.py
workspace/data/: course_transcript.md  injection_resume.md  project_experience.md  resume_draft.md  student_profile.md
workspace/data/job_roles/: ai_application_engineer.md  (+4 more)
workspace/skills/: action_plan.md  career_assessment.md  index.json  report_writer.md  role_matching.md  skill_gap_analysis.md
(+6 files in other folders)
